plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.luxeway'
version = '1.0.0'

java {
    sourceCompatibility = '17'
}

if (project.hasProperty('mySecretBuild')) {
    layout.buildDirectory = layout.projectDirectory.dir('build_run')
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    // WebFlux (WebClient / Mono)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    // Resilience4j & AOP
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    
    // Database - SQL Server / MySQL
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.4.2.jre11'
    runtimeOnly 'com.mysql:mysql-connector-j'
    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    
    // MapStruct for DTO mapping
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    
    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    
    // File Upload
    implementation 'commons-fileupload:commons-fileupload:1.5'
    
    // ITEXT PDF
    implementation 'com.itextpdf:itextpdf:5.5.13.3'
    
    // Apache Tika
    implementation 'org.apache.tika:tika-core:2.9.1'
    
    // JSON Processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs "-Dfile.encoding=UTF-8"
}

// Gradle Wrapper task
wrapper {
    gradleVersion = '8.5'
}

tasks.register('runSecurityTests') {
    dependsOn 'testClasses'
    doLast {
        def urls = sourceSets.test.runtimeClasspath.files.collect { it.toURI().toURL() }
        def classLoader = new java.net.URLClassLoader(urls as java.net.URL[], ClassLoader.systemClassLoader)
        
        def launcherDiscoveryRequestBuilderClass = classLoader.loadClass('org.junit.platform.launcher.core.LauncherDiscoveryRequestBuilder')
        def discoverySelectorsClass = classLoader.loadClass('org.junit.platform.engine.discovery.DiscoverySelectors')
        def launcherFactoryClass = classLoader.loadClass('org.junit.platform.launcher.core.LauncherFactory')
        def summaryGeneratingListenerClass = classLoader.loadClass('org.junit.platform.launcher.listeners.SummaryGeneratingListener')
        
        def request = launcherDiscoveryRequestBuilderClass
            .request()
            .selectors(discoverySelectorsClass.selectClass(classLoader.loadClass('com.luxeway.security.SecurityIntegrationTest')))
            .build()
            
        def launcher = launcherFactoryClass.create()
        def listener = summaryGeneratingListenerClass.getDeclaredConstructor().newInstance()
        
        launcher.registerTestExecutionListeners(listener)
        
        def oldContextClassLoader = Thread.currentThread().getContextClassLoader()
        try {
            Thread.currentThread().setContextClassLoader(classLoader)
            launcher.execute(request)
        } finally {
            Thread.currentThread().setContextClassLoader(oldContextClassLoader)
        }
        
        def summary = listener.getSummary()
        println "=== SECURITY TEST RUN SUMMARY ==="
        println "Tests found: ${summary.testsFoundCount}"
        println "Tests succeeded: ${summary.testsSucceededCount}"
        println "Tests failed: ${summary.testsFailedCount}"
        
        if (summary.testsFailedCount > 0) {
            summary.failures.each { failure ->
                println "FAILED: ${failure.testIdentifier.displayName}"
                failure.exception.printStackTrace()
            }
            throw new org.gradle.api.GradleException("Security integration tests failed!")
        }
    }
}